rename list-group-unstyled, text-link

--- a/accessibility.html
+++ b/accessibility.html
@@ -226,7 +226,7 @@
                   <div class="tqe8ewx dir dir-ltr">
                     <h2 class="tcynl4i dir dir-ltr">We’re here to help</h2>
                     <div class="szzwfzm dir dir-ltr">Visit our <a target="_blank" href="/help/home"
-                        class="_1sikdxcl">Help Center</a> for more information</div>
+                        class="text-link">Help Center</a> for more information</div>
                   </div>
                   <div class="f4x5qn6 dir dir-ltr">
                     <div class="r133491k dir dir-ltr">
@@ -634,7 +634,7 @@
                     <div class="tqe8ewx dir dir-ltr">
                       <h2 class="tcynl4i dir dir-ltr">We’re here to help</h2>
                       <div class="szzwfzm dir dir-ltr">Visit our <a target="_blank" href="/help/home"
-                          class="_1sikdxcl">Help
+                          class="text-link">Help
                           Center</a> for more information</div>
                     </div>
                     <div class="f4x5qn6 dir dir-ltr">
