--- a/article.html
+++ b/article.html
@@ -1092,13 +1092,13 @@
                                       <p>Offering your Experience at a lower introductory price can be a great way to
                                           attract bookings and <a target="_blank"
                                               href="/resources/hosting-experiences/a/testing-out-your-new-in-person-experience-413"
-                                              class="_1sikdxcl">gather feedback</a> from guests, especially when you’re
+                                              class="text-link">gather feedback</a> from guests, especially when you’re
                                           just starting out. Once you’ve gotten a few reviews, you may want to adjust the
                                           price of your listing or experiment with different discounts or promotions to
                                           increase your earnings.</p>
                                       <p><a target="_blank"
                                               href="/resources/hosting-experiences/a/pricing-strategies-for-experiences-397"
-                                              class="_1sikdxcl">Learn more about pricing</a></p>
+                                              class="text-link">Learn more about pricing</a></p>
                                     </div>
                                   </div>
                                 </div>
@@ -1157,7 +1157,7 @@
                                           will be canceled without penalty to you.</p>
                                       <p><a target="_blank"
                                               href="/help/article/1934/how-do-i-set-my-experience-preparation-and-cutoff-times"
-                                              class="_1sikdxcl">Learn more about cutoff times</a></p>
+                                              class="text-link">Learn more about cutoff times</a></p>
                                       <p>We hope these suggestions help you adjust your settings so that guests can more
                                           easily discover and book your Experience.</p>
                                     </div>
