--- a/edit/photos.html
+++ b/edit/photos.html
@@ -2536,7 +2536,7 @@
                                       <div class="_c56c9g">
                                         <a
                                           href="/resources/hosting-experiences/a/photo-requirements-for-experiences-386"
-                                          class="_1sikdxcl"
+                                          class="text-link"
                                         >
                                           <span
                                             class="d-inline-flex atm_vh_yfq0k3 atm_ar_vrvcex atm_h_1h6ojuz dir dir-ltr"
