--- a/host-liability-insurance.html
+++ b/host-liability-insurance.html
@@ -281,7 +281,7 @@
                         <ol class="b1wj0iwp dir dir-ltr">
                           <li class="l79qg7k dir dir-ltr">
                             <div class="tg0jqgn dir dir-ltr">
-                              <a href="/help/" class="_1sikdxcl">
+                              <a href="/help/" class="text-link">
                                     <div class="tg0jqgn dir dir-ltr">Home</div>
                               </a>
                             </div>
@@ -289,7 +289,7 @@
                           </li>
                           <li class="l79qg7k dir dir-ltr">
                             <div class="tg0jqgn dir dir-ltr">
-                              <a href="/help/all-topics" class="_1sikdxcl">
+                              <a href="/help/all-topics" class="text-link">
                                 <div class="tg0jqgn dir dir-ltr">All topics</div>
                               </a>
                             </div>
@@ -297,7 +297,7 @@
                           </li>
                           <li class="l79qg7k dir dir-ltr">
                             <div class="tg0jqgn dir dir-ltr">
-                              <a href="/help/topic/1382/about-airbnb" class="_1sikdxcl">
+                              <a href="/help/topic/1382/about-airbnb" class="text-link">
                                 <div class="tg0jqgn dir dir-ltr">About Airbnb
                                   <span class="a8jt5op dir dir-ltr"> – help
                                     topic
@@ -309,7 +309,7 @@
                           </li>
                           <li class="l79qg7k dir dir-ltr">
                             <div class="tg0jqgn dir dir-ltr">
-                              <a href="/help/topic/1380/our-community-policies" class="_1sikdxcl">
+                              <a href="/help/topic/1380/our-community-policies" class="text-link">
                                 <div class="tg0jqgn dir dir-ltr">Our community policies
                                   <span class="a8jt5op dir dir-ltr"> – help topic</span>
                                 </div>
@@ -319,7 +319,7 @@
                           </li>
                           <li class="l79qg7k dir dir-ltr">
                             <div class="tg0jqgn dir dir-ltr">
-                              <a href="/help/topic/1630/hosting-stays" class="_1sikdxcl">
+                              <a href="/help/topic/1630/hosting-stays" class="text-link">
                                 <div class="tg0jqgn dir dir-ltr">Hosting stays
                                   <span class="a8jt5op dir dir-ltr"> – help topic</span>
                                 </div>
@@ -561,7 +561,7 @@
                               <a href="/help/contact-us" class="_1dj2p4gk">Contact us</a>
                             </div>
                             <div class="tr5dwk dir dir-ltr">
-                              You can also <a href="/help/feedback" class="_1sikdxcl">give us feedback.</a>
+                              You can also <a href="/help/feedback" class="text-link">give us feedback.</a>
                             </div>
                           </section>
                         </aside>
