--- a/listings-product/products.html
+++ b/listings-product/products.html
@@ -22623,7 +22623,7 @@
                               <div class="l1gyhzo5 dir dir-ltr">
                                 Find complete details on how AirCover protects
                                 your booking in our
-                                <a target="_blank" href="/help/article/3218" class="_1sikdxcl">Help Center</a>
+                                <a target="_blank" href="/help/article/3218" class="text-link">Help Center</a>
                               </div>
                             </div>
                           </section>
@@ -30186,7 +30186,7 @@
                               <a
                                 target="_blank"
                                 href="/help/article/3218"
-                                class="_1sikdxcl"
+                                class="text-link"
                                 >Help Center</a
                               >
                             </div>
