--- a/messages-loader.html
+++ b/messages-loader.html
@@ -719,7 +719,7 @@
                                                               <div class="_1eg8y1b"><span>This case is closed. Still
                                                                   need help?</span>&nbsp;<a
                                                                   href="/help/contact-us?entry=CLOSED_TICKET"
-                                                                  class="_1sikdxcl"><span class="_1x9f0ie">Contact
+                                                                  class="text-link"><span class="_1x9f0ie">Contact
                                                                     us</span></a></div>
                                                             </div>
                                                           </div>
@@ -833,7 +833,7 @@
                                                               <div class="_1eg8y1b"><span>You’re now matched with
                                                                   Myrna.</span>&nbsp;<a
                                                                   href="/help/article/3011/get-help-with-your-listing-from-a-superhost"
-                                                                  class="_1sikdxcl"><span class="_1x9f0ie">Learn
+                                                                  class="text-link"><span class="_1x9f0ie">Learn
                                                                     More</span></a></div>
                                                             </div>
                                                           </div>
@@ -1390,7 +1390,7 @@
                                                               <div class="_1eg8y1b"><span>Your inquiry for 1 guest on
                                                                   Dec 21 – 23 has been
                                                                   sent.</span>&nbsp;<a href="/rooms/35353333"
-                                                                  class="_1sikdxcl"><span class="_1x9f0ie">Show
+                                                                  class="text-link"><span class="_1x9f0ie">Show
                                                                     listing</span></a></div>
                                                             </div>
                                                           </div>
@@ -1877,7 +1877,7 @@
                         </svg></div>
                     </button></div>
                   <div class="s1a59ii2 dir dir-ltr">To change all translations, go to settings.</div>
-                  <div class="m1czjzwg dir dir-ltr"><a href="/account-settings/preferences" class="_1sikdxcl"><span
+                  <div class="m1czjzwg dir dir-ltr"><a href="/account-settings/preferences" class="text-link"><span
                         class="s1a59ii2 dir dir-ltr">Translation settings</span></a></div>
                   <div class="d1euq7pd dir dir-ltr"><button type="button" class="_15rpys7s"><span
                         class="s1a59ii2 dir dir-ltr">Translation settings</span></button></div>
@@ -1932,7 +1932,7 @@
                         </svg></div>
                     </button></div>
                   <div class="s1a59ii2 dir dir-ltr">To change all translations, go to settings.</div>
-                  <div class="m1czjzwg dir dir-ltr"><a href="/account-settings/preferences" class="_1sikdxcl"><span
+                  <div class="m1czjzwg dir dir-ltr"><a href="/account-settings/preferences" class="text-link"><span
                         class="s1a59ii2 dir dir-ltr">Translation settings</span></a></div>
                   <div class="d1euq7pd dir dir-ltr"><button type="button" class="_15rpys7s"><span
                         class="s1a59ii2 dir dir-ltr">Translation settings</span></button></div>
