--- a/online-experience/insights.html
+++ b/online-experience/insights.html
@@ -1411,7 +1411,7 @@
                                 <div class="_14ddvtv">
                                   <a
                                     href="/experience-hosting/performance?modal=expertise"
-                                    class="_1sikdxcl"
+                                    class="text-link"
                                   >
                                     <span class="visually-hidden dir dir-ltr">
                                       Expertise
@@ -1443,7 +1443,7 @@
                                 <div class="_14ddvtv">
                                   <a
                                     href="/experience-hosting/performance?modal=access"
-                                    class="_1sikdxcl"
+                                    class="text-link"
                                   >
                                     <span class="visually-hidden dir dir-ltr">
                                       Insider access
@@ -1475,7 +1475,7 @@
                                 <div class="_14ddvtv">
                                   <a
                                     href="/experience-hosting/performance?modal=connection"
-                                    class="_1sikdxcl"
+                                    class="text-link"
                                   >
                                     <span class="visually-hidden dir dir-ltr">
                                       Connection
