--- a/products-mobile.html
+++ b/products-mobile.html
@@ -14325,7 +14325,7 @@
                                 <a
                                   target="_blank"
                                   href="/help/article/3218"
-                                  class="_1sikdxcl"
+                                  class="text-link"
                                   >Help Center</a
                                 >
                               </div>
