--- a/search-tips.html
+++ b/search-tips.html
@@ -283,7 +283,7 @@
                             <div class="tg0jqgn dir dir-ltr">
                               <a
                                 href="/help/topic/1348/searching-and-booking"
-                                class="_1sikdxcl"
+                                class="text-link"
                                 ><div class="tg0jqgn dir dir-ltr">
                                   <div class="shocm1i dir dir-ltr">
                                     <span class="sqlhms0 dir dir-ltr"
@@ -328,7 +328,7 @@
                         <ol class="b1wj0iwp dir dir-ltr">
                           <li class="l79qg7k dir dir-ltr">
                             <div class="tg0jqgn dir dir-ltr">
-                              <a href="/help/" class="_1sikdxcl"
+                              <a href="/help/" class="text-link"
                                 ><div class="tg0jqgn dir dir-ltr">Home</div></a
                               >
                             </div>
@@ -336,7 +336,7 @@
                           </li>
                           <li class="l79qg7k dir dir-ltr">
                             <div class="tg0jqgn dir dir-ltr">
-                              <a href="/help/all-topics" class="_1sikdxcl"
+                              <a href="/help/all-topics" class="text-link"
                                 ><div class="tg0jqgn dir dir-ltr">
                                   All topics
                                 </div></a
@@ -348,7 +348,7 @@
                             <div class="tg0jqgn dir dir-ltr">
                               <a
                                 href="/help/topic/1348/searching-and-booking"
-                                class="_1sikdxcl"
+                                class="text-link"
                                 ><div class="tg0jqgn dir dir-ltr">
                                   Searching and booking<span
                                     class="a8jt5op dir dir-ltr"
