--- a/social-impact-host.html
+++ b/social-impact-host.html
@@ -305,7 +305,7 @@
                                               rel="noopener noreferrer"
                                               target="_blank"
                                               href="https://youtu.be/uiWv8PgC6VM"
-                                              class="_1sikdxcl"
+                                              class="text-link"
                                               >Watch Guide Dogs’ story</a
                                             >
                                           </div>
@@ -1336,7 +1336,7 @@ Harlem, New York City"
                                           rel="noopener noreferrer"
                                           target="_blank"
                                           href="https://www.airbnb.com/help/article/1451/what-are-the-quality-standards-for-airbnb-experiences"
-                                          class="_1sikdxcl"
+                                          class="text-link"
                                           >Learn about our quality standards</a
                                         >
                                       </div>
@@ -1410,7 +1410,7 @@ Harlem, New York City"
                                       <div class="_jpqjm5">
                                         <a
                                           href="https://app.ngok.techsoup.org/Default.aspx?vendorAppId=ae31803e-0d24-47a1-81e1-67b4f87fb7eb"
-                                          class="_1sikdxcl"
+                                          class="text-link"
                                           >Validate your nonprofit</a
                                         >
                                       </div>
@@ -1488,7 +1488,7 @@ Harlem, New York City"
                                           rel="noopener noreferrer"
                                           target="_blank"
                                           href="https://airbnb.com/host/experiences"
-                                          class="_1sikdxcl"
+                                          class="text-link"
                                           >Become a host</a
                                         >
                                       </div>
@@ -1603,7 +1603,7 @@ Harlem, New York City"
                                               rel="noopener noreferrer"
                                               target="_blank"
                                               href="https://www.airbnb.com/social-impact"
-                                              class="_1sikdxcl"
+                                              class="text-link"
                                               >Explore Social Impact
                                               experiences</a
                                             >
