--- a/ticket-selection.html
+++ b/ticket-selection.html
@@ -320,7 +320,7 @@
                                         <div class="_rqfxvmb">
                                           <div>
                                             <span class="_121z06r2"
-                                              ><a href="/help" class="_1sikdxcl"
+                                              ><a href="/help" class="text-link"
                                                 >Back to Help Center</a
                                               ></span
                                             >
@@ -667,7 +667,7 @@
                                             <li class="_1qil0yw">
                                               <a
                                                 href="/help/article/221"
-                                                class="_1sikdxcl"
+                                                class="text-link"
                                                 ><div class="_czm8crp">
                                                   Creating an account
                                                 </div></a
@@ -676,7 +676,7 @@
                                             <li class="_1qil0yw">
                                               <a
                                                 href="/help/article/2269"
-                                                class="_1sikdxcl"
+                                                class="text-link"
                                                 ><div class="_czm8crp">
                                                   Airbnb Referral Program Terms
                                                   and Conditions
@@ -686,7 +686,7 @@
                                             <li class="_1qil0yw">
                                               <a
                                                 href="/help/article/252"
-                                                class="_1sikdxcl"
+                                                class="text-link"
                                                 ><div class="_czm8crp">
                                                   Searching for stays
                                                 </div></a
@@ -695,7 +695,7 @@
                                             <li class="_1qil0yw">
                                               <a
                                                 href="/help/article/147"
-                                                class="_1sikdxcl"
+                                                class="text-link"
                                                 ><div class="_czm8crp">
                                                   Contacting Hosts
                                                 </div></a
@@ -728,7 +728,7 @@
                                             <li class="_1qil0yw">
                                               <a
                                                 href="/help/article/76"
-                                                class="_1sikdxcl"
+                                                class="text-link"
                                                 ><div class="_czm8crp">
                                                   Change or reset your password
                                                 </div></a
@@ -737,7 +737,7 @@
                                             <li class="_1qil0yw">
                                               <a
                                                 href="/help/article/823"
-                                                class="_1sikdxcl"
+                                                class="text-link"
                                                 ><div class="_czm8crp">
                                                   Editing, removing, or adding a
                                                   payment method
@@ -747,7 +747,7 @@
                                             <li class="_1qil0yw">
                                               <a
                                                 href="/help/article/54"
-                                                class="_1sikdxcl"
+                                                class="text-link"
                                                 ><div class="_czm8crp">
                                                   Adding a payout method
                                                 </div></a
@@ -756,7 +756,7 @@
                                             <li class="_1qil0yw">
                                               <a
                                                 href="/help/article/240"
-                                                class="_1sikdxcl"
+                                                class="text-link"
                                                 ><div class="_czm8crp">
                                                   Deactivating or deleting your
                                                   account
@@ -790,7 +790,7 @@
                                             <li class="_1qil0yw">
                                               <a
                                                 href="/help/article/1237"
-                                                class="_1sikdxcl"
+                                                class="text-link"
                                                 ><div class="_czm8crp">
                                                   Verifying your identity
                                                 </div></a
@@ -799,7 +799,7 @@
                                             <li class="_1qil0yw">
                                               <a
                                                 href="/help/article/88"
-                                                class="_1sikdxcl"
+                                                class="text-link"
                                                 ><div class="_czm8crp">
                                                   If you can’t get in touch with
                                                   your Host
@@ -809,7 +809,7 @@
                                             <li class="_1qil0yw">
                                               <a
                                                 href="/help/article/199"
-                                                class="_1sikdxcl"
+                                                class="text-link"
                                                 ><div class="_czm8crp">
                                                   Paying outside Airbnb
                                                 </div></a
@@ -818,7 +818,7 @@
                                             <li class="_1qil0yw">
                                               <a
                                                 href="/help/article/209"
-                                                class="_1sikdxcl"
+                                                class="text-link"
                                                 ><div class="_czm8crp">
                                                   Paying and communicating
                                                   through Airbnb
