--- a/video.html
+++ b/video.html
@@ -1048,7 +1048,7 @@
                                                   <p>Airbnb Experience Hosts can make guests traveling far from home feel as if they
                                                       truly belong. This video goes behind the scenes and lets us in on the guest's
                                                       point of view. Airbnb Experience guests Ranier and Stephanie talk about how
-                                                      Hogan, the Host of <a href="/experiences/27232" class="_1sikdxcl"><span>Korean
+                                                      Hogan, the Host of <a href="/experiences/27232" class="text-link"><span>Korean
                                                               Home Food Cooking</span></a>, pairs food and hospitality to help them
                                                       feel at ease and connected to a new place.</p>
                                               </div>
