--- a/feedback.html
+++ b/feedback.html
@@ -281,7 +281,7 @@
                         <ol class="b1wj0iwp dir dir-ltr">
                           <li class="l79qg7k dir dir-ltr">
                             <div class="tg0jqgn dir dir-ltr">
-                              <a href="/help/" class="_1sikdxcl"
+                              <a href="/help/" class="text-link"
                                 ><div class="tg0jqgn dir dir-ltr">Home</div></a
                               >
                             </div>
@@ -322,11 +322,11 @@
                               <p class="t13l59hu dir dir-ltr">
                                 If you do have a specific question, or need help
                                 resolving a problem, you can visit our
-                                <a href="/help" class="_1sikdxcl"
+                                <a href="/help" class="text-link"
                                   >Help Center</a
                                 >
                                 or
-                                <a href="/help/contact-us" class="_1sikdxcl"
+                                <a href="/help/contact-us" class="text-link"
                                   >contact us</a
                                 >
                                 to connect with our support team.
