--- a/listings-product/trips.html
+++ b/listings-product/trips.html
@@ -605,7 +605,7 @@
                                         <a
                                           aria-label="Visit the Help&nbsp;Center"
                                           href="/help?audience=guest"
-                                          class="_1sikdxcl"
+                                          class="text-link"
                                         >
                                           Visit the Help&nbsp;Center
                                         </a>
