--- a/messages.html
+++ b/messages.html
@@ -936,7 +936,7 @@
                                                               <div class="_1eg8y1b"><span>This case is closed. Still
                                                                   need help?</span>&nbsp;<a
                                                                   href="/help/contact-us?entry=CLOSED_TICKET"
-                                                                  class="_1sikdxcl"><span class="_1x9f0ie">Contact
+                                                                  class="text-link"><span class="_1x9f0ie">Contact
                                                                     us</span></a></div>
                                                             </div>
                                                           </div>
@@ -1050,7 +1050,7 @@
                                                               <div class="_1eg8y1b"><span>You’re now matched with
                                                                   Myrna.</span>&nbsp;<a
                                                                   href="/help/article/3011/get-help-with-your-listing-from-a-superhost"
-                                                                  class="_1sikdxcl"><span class="_1x9f0ie">Learn
+                                                                  class="text-link"><span class="_1x9f0ie">Learn
                                                                     More</span></a></div>
                                                             </div>
                                                           </div>
@@ -1607,7 +1607,7 @@
                                                               <div class="_1eg8y1b"><span>Your inquiry for 1 guest on
                                                                   Dec 21 – 23 has been
                                                                   sent.</span>&nbsp;<a href="/rooms/35353333"
-                                                                  class="_1sikdxcl"><span class="_1x9f0ie">Show
+                                                                  class="text-link"><span class="_1x9f0ie">Show
                                                                     listing</span></a></div>
                                                             </div>
                                                           </div>
@@ -1961,7 +1961,7 @@
                                           before booking</h3>
                                       </div>
                                       <div class="_4gelgl"><a target="_blank" href="/experience_reservation/TARYZPXS"
-                                          class="_1sikdxcl">View
+                                          class="text-link">View
                                           experience details</a></div>
                                       <div class="_161kcnd">
                                         <div>
@@ -2045,7 +2045,7 @@
                                             <div class="_1p5glqf">Request refund</div>
                                           </h4>
                                           <div class="_1lwa8t2h"><a target="_blank"
-                                              href="/resolutions/create/trip/TARYZPXS" class="_1sikdxcl">Visit
+                                              href="/resolutions/create/trip/TARYZPXS" class="text-link">Visit
                                               Resolution Center</a></div>
                                         </div>
                                       </div>
@@ -2749,7 +2749,7 @@
                                                             <div class="_1eg8y1b"><span>This case is closed. Still need
                                                                 help?</span>&nbsp;<a target="_blank"
                                                                 href="/help/contact-us?entry=CLOSED_TICKET"
-                                                                class="_1sikdxcl"><span class="_1x9f0ie">Contact
+                                                                class="text-link"><span class="_1x9f0ie">Contact
                                                                   us</span></a></div>
                                                           </div>
                                                         </div>
@@ -2856,7 +2856,7 @@
                                                             <div class="_1eg8y1b"><span>You’re now matched with
                                                                 Myrna.</span>&nbsp;<a target="_blank"
                                                                 href="/help/article/3011/get-help-with-your-listing-from-a-superhost"
-                                                                class="_1sikdxcl"><span class="_1x9f0ie">Learn
+                                                                class="text-link"><span class="_1x9f0ie">Learn
                                                                   More</span></a></div>
                                                           </div>
                                                         </div>
@@ -3387,7 +3387,7 @@
                                                             <div class="_1eg8y1b"><span>Your inquiry for 1 guest on Dec
                                                                 21 – 23 has been
                                                                 sent.</span>&nbsp;<a target="_blank"
-                                                                href="/rooms/35353333" class="_1sikdxcl"><span
+                                                                href="/rooms/35353333" class="text-link"><span
                                                                   class="_1x9f0ie">Show listing</span></a></div>
                                                           </div>
                                                         </div>
@@ -3769,7 +3769,7 @@
                                         before booking</h3>
                                     </div>
                                     <div class="_4gelgl"><a target="_blank" href="/experience_reservation/TARYZPXS"
-                                        class="_1sikdxcl">View
+                                        class="text-link">View
                                         experience details</a></div>
                                     <div class="_161kcnd">
                                       <div>
@@ -3852,7 +3852,7 @@
                                           <div class="_1p5glqf">Request refund</div>
                                         </h4>
                                         <div class="_1lwa8t2h"><a target="_blank"
-                                            href="/resolutions/create/trip/TARYZPXS" class="_1sikdxcl">Visit Resolution
+                                            href="/resolutions/create/trip/TARYZPXS" class="text-link">Visit Resolution
                                             Center</a></div>
                                       </div>
                                     </div>
@@ -4196,7 +4196,7 @@
                         </svg></div>
                     </button></div>
                   <div class="s1a59ii2 dir dir-ltr">To change all translations, go to settings.</div>
-                  <div class="m1czjzwg dir dir-ltr"><a href="/account-settings/preferences" class="_1sikdxcl"><span
+                  <div class="m1czjzwg dir dir-ltr"><a href="/account-settings/preferences" class="text-link"><span
                         class="s1a59ii2 dir dir-ltr">Translation settings</span></a></div>
                   <div class="d1euq7pd dir dir-ltr"><button type="button" class="_15rpys7s"><span
                         class="s1a59ii2 dir dir-ltr">Translation settings</span></button></div>
@@ -4251,7 +4251,7 @@
                         </svg></div>
                     </button></div>
                   <div class="s1a59ii2 dir dir-ltr">To change all translations, go to settings.</div>
-                  <div class="m1czjzwg dir dir-ltr"><a href="/account-settings/preferences" class="_1sikdxcl"><span
+                  <div class="m1czjzwg dir dir-ltr"><a href="/account-settings/preferences" class="text-link"><span
                         class="s1a59ii2 dir dir-ltr">Translation settings</span></a></div>
                   <div class="d1euq7pd dir dir-ltr"><button type="button" class="_15rpys7s"><span
                         class="s1a59ii2 dir dir-ltr">Translation settings</span></button></div>
