--- a/searching-and-booking.html
+++ b/searching-and-booking.html
@@ -281,7 +281,7 @@
                         <ol class="b1wj0iwp dir dir-ltr">
                           <li class="l79qg7k dir dir-ltr">
                             <div class="tg0jqgn dir dir-ltr">
-                              <a href="/help/all-topics" class="_1sikdxcl"
+                              <a href="/help/all-topics" class="text-link"
                                 ><div class="tg0jqgn dir dir-ltr">
                                   <div class="shocm1i dir dir-ltr">
                                     <span class="sqlhms0 dir dir-ltr"
@@ -318,7 +318,7 @@
                   </div>
                   <div class="_h69t7tv">
                     <div class="czkr4ph dir dir-ltr">
-                      <nav aria-label="breadcrumb"><ol class="b1wj0iwp dir dir-ltr"><li class="l79qg7k dir dir-ltr"><div class="tg0jqgn dir dir-ltr"><a href="/help/" class="_1sikdxcl"><div class="tg0jqgn dir dir-ltr">Home</div></a></div><span class="shiaxno dir dir-ltr"></span></li><li class="l79qg7k dir dir-ltr"><div class="tg0jqgn dir dir-ltr"><a href="/help/all-topics" class="_1sikdxcl"><div class="tg0jqgn dir dir-ltr">All topics</div></a></div><span class="shiaxno dir dir-ltr"></span></li><li class="l79qg7k dir dir-ltr"><div class="tg0jqgn dir dir-ltr"><span class="c15y1379 dir dir-ltr">Searching and booking<span class="a8jt5op dir dir-ltr"> <!-- -->– <!-- -->help topic</span></span></div></li></ol></nav>
+                      <nav aria-label="breadcrumb"><ol class="b1wj0iwp dir dir-ltr"><li class="l79qg7k dir dir-ltr"><div class="tg0jqgn dir dir-ltr"><a href="/help/" class="text-link"><div class="tg0jqgn dir dir-ltr">Home</div></a></div><span class="shiaxno dir dir-ltr"></span></li><li class="l79qg7k dir dir-ltr"><div class="tg0jqgn dir dir-ltr"><a href="/help/all-topics" class="text-link"><div class="tg0jqgn dir dir-ltr">All topics</div></a></div><span class="shiaxno dir dir-ltr"></span></li><li class="l79qg7k dir dir-ltr"><div class="tg0jqgn dir dir-ltr"><span class="c15y1379 dir dir-ltr">Searching and booking<span class="a8jt5op dir dir-ltr"> <!-- -->– <!-- -->help topic</span></span></div></li></ol></nav>
                     </div>
                   </div>
                   <div class="b1gyj3pz dir dir-ltr">
