--- a/searching-for-stays.html
+++ b/searching-for-stays.html
@@ -308,7 +308,7 @@
                             <div class="tg0jqgn dir dir-ltr">
                               <a
                                 href="/help/topic/1334/how-to-search"
-                                class="_1sikdxcl"
+                                class="text-link"
                                 ><div class="tg0jqgn dir dir-ltr">
                                   <div class="shocm1i dir dir-ltr">
                                     <span class="sqlhms0 dir dir-ltr"
@@ -353,7 +353,7 @@
                         <ol class="b1wj0iwp dir dir-ltr">
                           <li class="l79qg7k dir dir-ltr">
                             <div class="tg0jqgn dir dir-ltr">
-                              <a href="/help/" class="_1sikdxcl"
+                              <a href="/help/" class="text-link"
                                 ><div class="tg0jqgn dir dir-ltr">Home</div></a
                               >
                             </div>
@@ -361,7 +361,7 @@
                           </li>
                           <li class="l79qg7k dir dir-ltr">
                             <div class="tg0jqgn dir dir-ltr">
-                              <a href="/help/all-topics" class="_1sikdxcl"
+                              <a href="/help/all-topics" class="text-link"
                                 ><div class="tg0jqgn dir dir-ltr">
                                   All topics
                                 </div></a
@@ -373,7 +373,7 @@
                             <div class="tg0jqgn dir dir-ltr">
                               <a
                                 href="/help/topic/1348/searching-and-booking"
-                                class="_1sikdxcl"
+                                class="text-link"
                                 ><div class="tg0jqgn dir dir-ltr">
                                   Searching and booking<span
                                     class="a8jt5op dir dir-ltr"
@@ -389,7 +389,7 @@
                             <div class="tg0jqgn dir dir-ltr">
                               <a
                                 href="/help/topic/1337/search-tips"
-                                class="_1sikdxcl"
+                                class="text-link"
                                 ><div class="tg0jqgn dir dir-ltr">
                                   Search tips<span class="a8jt5op dir dir-ltr">
                                     – help topic</span
@@ -403,7 +403,7 @@
                             <div class="tg0jqgn dir dir-ltr">
                               <a
                                 href="/help/topic/1334/how-to-search"
-                                class="_1sikdxcl"
+                                class="text-link"
                                 ><div class="tg0jqgn dir dir-ltr">
                                   How to search<span
                                     class="a8jt5op dir dir-ltr"
@@ -1167,7 +1167,7 @@
                             </div>
                             <div class="tr5dwk dir dir-ltr">
                               You can also
-                              <a href="/help/feedback" class="_1sikdxcl"
+                              <a href="/help/feedback" class="text-link"
                                 >give us feedback.</a
                               >
                             </div>
